PR/48701: Timo Buhrmester: spurious messages while booting silently (gpio, glxsb); use aprint_normal() >Category:       kern >Synopsis:       spurious messages while booting silently (gpio, glxsb) >Confidential:   no >Severity:       non-critical >Priority:       medium >Responsible:    kern-bug-people >State:          open >Class:          sw-bug >Submitter-Id:   net